# gplspec

./: .clang-format  CMakeCache.txt  CMakeLists.txt  README.md  compdebug.sh  run_bench9.sh  tpoint.txt
examples/: CMakeLists.txt  clean_bench_1.cpp  clean_bench_10.cpp  clean_bench_2.cpp  clean_bench_3.cpp  clean_bench_4.cpp  clean_bench_5.cpp  clean_bench_6.cpp  clean_bench_7.cpp  clean_bench_8.cpp  clean_bench_9.cpp  phobos_gravity.cpp  phobos_gravity_perturbation.cpp  phobos_heterogeneous.cpp
gplspec/: All  Core  GeneralModels  SimpleModels  Test  Timer
gplspec/src/: CMakeLists.txt  Gravitational_Field.code-workspace  Mapping_Tools.h  Pseudospectral_Matrix_Wrapper.h  Pseudospectral_Matrix_Wrapper3D.h  Radial_Tools.h  Spectral_Element_Tools.h  SphericalGeometryPreconditioner.h  Spherical_Integrator.h  Timer_Class.h  testtools.h
gplspec/src/GeneralModels/: Density_Model_Constructors.h  Density_Model_Return.h  Earth_Density_Models_3D.h  Earth_General_Models_1D.h  Earth_General_Models_3D.h  Gravitational_Field.code-workspace  Gravity_Tools.h  Perturbation_Models.h
gplspec/src/SimpleModels/: Simple_Model_Class_Definition.h  Simple_Model_Constructor_Definitions.h  Simple_Model_Return_Definitions.h
gplspec/src/testremove/: Aspherical_Geometry_Potential.cpp  Eigen_Matrix_Wrapper.cpp  Learning_GSHTrans.cpp  Spectral_Element.cpp  Spectral_Element_Sparse.cpp  Spectral_Element_Sparse_Test.cpp  Spherical_Geometry_Potential.cpp  Test.cpp  TestEllipticity  crtptest.cpp  ellipticitytools.h
modeldata/: prem_noocean_noattenuation.txt
work/: BenchPlot10.py  CleanBench10Plot.py  CleanBench1Plot.py  CleanBench2Plot.py  CleanBench3Plot.py  CleanBench4Plot.py  CleanBench5Plot.py  CleanBench6Plot.py  CleanBench6Plot1.py  CleanBench6Plot2.py  CleanBench7Plot.py  CleanBench7Plot1.py  CleanBench8Plot.py  CleanBench9Plot.py  PhobosPerturbation.py  PhobosPlot.py  PhobosSensitivityKernel.py  PhobosSensitivityKernel2.py  PhobosSliceDensity.py  PhobosSlicePlot.py  PhobosSlicePlot2.py  PhobosSurfacePotential.py  PhobosSurfacePotentialRotated.py  PhobosSurfaceTopography.py  PowerSpectrum.py  bench7.lm  bench7.lmcheck  bench7.scale  ellipticityplot.py
