add_executable(clean_bench_1 clean_bench_1.cpp)
target_link_libraries(clean_bench_1 gplspec PlanetaryModel FFTWpp TomographyModels)
add_executable(clean_bench_2 clean_bench_2.cpp)
target_link_libraries(clean_bench_2 gplspec PlanetaryModel FFTWpp TomographyModels)
add_executable(clean_bench_3 clean_bench_3.cpp)
target_link_libraries(clean_bench_3 gplspec PlanetaryModel FFTWpp TomographyModels)
add_executable(clean_bench_4 clean_bench_4.cpp)
target_link_libraries(clean_bench_4 gplspec PlanetaryModel FFTWpp TomographyModels)
add_executable(clean_bench_5 clean_bench_5.cpp)
target_link_libraries(clean_bench_5 gplspec PlanetaryModel FFTWpp TomographyModels)
add_executable(clean_bench_6 clean_bench_6.cpp)
target_link_libraries(clean_bench_6 gplspec PlanetaryModel FFTWpp TomographyModels)
add_executable(clean_bench_7 clean_bench_7.cpp)
target_link_libraries(clean_bench_7 gplspec PlanetaryModel FFTWpp TomographyModels)
add_executable(clean_bench_8 clean_bench_8.cpp)
target_link_libraries(clean_bench_8 gplspec PlanetaryModel FFTWpp TomographyModels)
add_executable(clean_bench_9 clean_bench_9.cpp)
target_link_libraries(clean_bench_9 gplspec PlanetaryModel FFTWpp TomographyModels)
add_executable(clean_bench_10 clean_bench_10.cpp)
target_link_libraries(clean_bench_10 gplspec PlanetaryModel FFTWpp TomographyModels)
add_executable(phobos_gravity phobos_gravity.cpp)
target_link_libraries(phobos_gravity gplspec PlanetaryModel FFTWpp TomographyModels)
add_executable(phobos_gravity_perturbation phobos_gravity_perturbation.cpp)
target_link_libraries(phobos_gravity_perturbation gplspec PlanetaryModel FFTWpp TomographyModels)
add_executable(phobos_heterogeneous phobos_heterogeneous.cpp)
target_link_libraries(phobos_heterogeneous gplspec PlanetaryModel FFTWpp TomographyModels)
